updated portfolio with descriptions and images

--- a/static/index.html
+++ b/static/index.html
@@ -8,18 +8,24 @@
 
 <body>
 	<!-- this is a comment in HTML -->
-	<h1>Annie Park</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1><b>Annie Park</b></h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>I'm a student.</p>
+	<p>I'm a student at UC San Diego, studying Cognitive Science Human Computer Interaction. Check out my <a href = "annie-park.webflow.io">website</a>.</p>
 
 	<h4>Projects</h4>
 	<ol>
-		<li>Design Thinking</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
+		<li> <a href = "www.academicintegrity.ucsd.edu"><b>Academic Integrity Website</b></a> 
+			<p>I redesigned the Academic Integrity Website and it was launched November 2015. I redesigned the information architecture and the overall look of the website. I also worked on banners via photoshop.</p>
+			<img src="integritybanner.jpg" alt="Integrity Banner" height="200" width="600">
+		</li>
+		<li><b>Phetch iOS App Design</b></br>
+			<img src="phetchlogo.png" alt="Phetch Logo" height="70" width="90">
+			<p>Phetch is an iOS app targeted for young adults living with their friends in a sharing, communal environment.</p>
+			<p>As a part of a Information Architecture and Usability class, we were given a project to design and implement a website or application in 10 weeks.  I formed a collaborative team of 5 people; I was one of the two UX Designers and the other three were the coders of our group.</p>
+		</li>
+		
 	</ol>
 </body>
 </html>
